added config-map and deployment file

--- a/Deployment/vendor-b.yml
+++ b/Deployment/vendor-b.yml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: crawler-sim
+  name: crawler-sim-vendor-b
   namespace: crawlers
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: crawler
+      app: vendor-b
   template:
     metadata:
       labels:
-        app: crawler
+        app: vendor-b
     spec:
       containers:
       - name: crawler
